# odd-platform-api/src/main/java/org/opendatadiscovery/oddplatform/service/activity/handler/ActivityHandler.java
@@ -2,12 +2,12 @@ package org.opendatadiscovery.oddplatform.service.activity.handler;
 
 import java.util.Map;
 import org.opendatadiscovery.oddplatform.dto.activity.ActivityContextInfo;
-import org.opendatadiscovery.oddplatform.dto.activity.ActivityEventType;
+import org.opendatadiscovery.oddplatform.dto.activity.ActivityEventTypeDto;
 import reactor.core.publisher.Mono;
 
 public interface ActivityHandler {
 
-    boolean isHandle(final ActivityEventType activityEventType);
+    boolean isHandle(final ActivityEventTypeDto activityEventTypeDto);
 
     Mono<ActivityContextInfo> getContextInfo(final Map<String, Object> parameters);
 
