# odd-platform-api/src/main/java/org/opendatadiscovery/oddplatform/service/activity/handler/InternalNameUpdatedActivityHandler.java
@@ -3,7 +3,7 @@ package org.opendatadiscovery.oddplatform.service.activity.handler;
 import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import org.opendatadiscovery.oddplatform.dto.activity.ActivityContextInfo;
-import org.opendatadiscovery.oddplatform.dto.activity.ActivityEventType;
+import org.opendatadiscovery.oddplatform.dto.activity.ActivityEventTypeDto;
 import org.opendatadiscovery.oddplatform.dto.activity.InternalNameActivityStateDto;
 import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveDataEntityRepository;
 import org.opendatadiscovery.oddplatform.utils.ActivityParameterNames;
@@ -17,8 +17,8 @@ public class InternalNameUpdatedActivityHandler implements ActivityHandler {
     private final ReactiveDataEntityRepository dataEntityRepository;
 
     @Override
-    public boolean isHandle(final ActivityEventType activityEventType) {
-        return activityEventType == ActivityEventType.INTERNAL_NAME_UPDATED;
+    public boolean isHandle(final ActivityEventTypeDto activityEventTypeDto) {
+        return activityEventTypeDto == ActivityEventTypeDto.INTERNAL_NAME_UPDATED;
     }
 
     @Override
